// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile project-detail screen snapshots (round-17) locks the no-id empty tree when no params are provided 1`] = `
<View
  edges={
    [
      "top",
    ]
  }
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0f0f0f",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "color": "rgba(244, 244, 244, 0.74)",
      }
    }
  >
    No project selected
  </Text>
</View>
`;

exports[`Mobile project-detail screen snapshots (round-17) requires an explicit switch before opening a Local project from Cloud mode 1`] = `
<View
  edges={
    [
      "top",
    ]
  }
  style={
    {
      "backgroundColor": "#0f0f0f",
      "flex": 1,
    }
  }
  testID="project-detail-screen"
>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "rgba(255, 255, 255, 0.10)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "paddingHorizontal": 12,
      }
    }
  >
    <View
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 8,
          "padding": 8,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={22}
        testID="icon-arrow-left"
      />
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#f4f4f4",
          "flex": 1,
          "fontSize": 16,
          "fontWeight": "600",
          "marginHorizontal": 8,
          "textAlign": "center",
        }
      }
    >
      Snapshot project
    </Text>
    <View
      accessibilityLabel="Open menu"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 8,
          "padding": 8,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={22}
        testID="icon-menu"
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
    testID="project-detail-scroll"
  >
    <View
      style={
        {
          "backgroundColor": "#212121",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 12,
          "borderWidth": 1,
          "gap": 12,
          "margin": 16,
          "padding": 16,
        }
      }
      testID="project-detail-local-fallback"
    >
      <Text
        style={
          {
            "color": "#f4f4f4",
            "fontSize": 15,
            "fontWeight": "600",
          }
        }
      >
        Snapshot project
      </Text>
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 13,
          }
        }
      >
        Local project. Details, chats, and sources stay on this device.
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#212121",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 12,
          "borderWidth": 1,
          "gap": 12,
          "margin": 16,
          "padding": 20,
        }
      }
      testID="project-detail-scope-notice"
    >
      <Text
        style={
          {
            "color": "#f4f4f4",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Local project
      </Text>
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 14,
          }
        }
      >
        Switch to Local mode to open this project's chats and sources.
      </Text>
      <View
        accessibilityLabel="Switch to Local mode"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "justifyContent": "center",
            "minHeight": 44,
          }
        }
      >
        <Text
          style={
            {
              "color": "#f4f4f4",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          Switch to Local mode
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mobile project-detail screen snapshots (round-17) shows local project chats only in Local mode 1`] = `
<View
  edges={
    [
      "top",
    ]
  }
  style={
    {
      "backgroundColor": "#0f0f0f",
      "flex": 1,
    }
  }
  testID="project-detail-screen"
>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "rgba(255, 255, 255, 0.10)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "paddingHorizontal": 12,
      }
    }
  >
    <View
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 8,
          "padding": 8,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={22}
        testID="icon-arrow-left"
      />
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#f4f4f4",
          "flex": 1,
          "fontSize": 16,
          "fontWeight": "600",
          "marginHorizontal": 8,
          "textAlign": "center",
        }
      }
    >
      Snapshot project
    </Text>
    <View
      accessibilityLabel="Open menu"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 8,
          "padding": 8,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={22}
        testID="icon-menu"
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
    testID="project-detail-scroll"
  >
    <View
      style={
        {
          "backgroundColor": "#212121",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 12,
          "borderWidth": 1,
          "gap": 12,
          "margin": 16,
          "padding": 16,
        }
      }
      testID="project-detail-local-fallback"
    >
      <Text
        style={
          {
            "color": "#f4f4f4",
            "fontSize": 15,
            "fontWeight": "600",
          }
        }
      >
        Snapshot project
      </Text>
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 13,
          }
        }
      >
        Local project. Details, chats, and sources stay on this device.
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#212121",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 4,
          "marginHorizontal": 16,
          "marginTop": 12,
          "padding": 3,
        }
      }
    >
      <View
        accessibilityLabel="Chats"
        accessibilityRole="tab"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2a2a2a",
            "borderRadius": 8,
            "flex": 1,
            "paddingVertical": 7,
          }
        }
      >
        <Text
          style={
            {
              "color": "#f4f4f4",
              "fontSize": 13,
              "fontWeight": "600",
            }
          }
        >
          Chats
        </Text>
      </View>
      <View
        accessibilityLabel="Sources"
        accessibilityRole="tab"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 8,
            "flex": 1,
            "paddingVertical": 7,
          }
        }
      >
        <Text
          style={
            {
              "color": "rgba(244, 244, 244, 0.56)",
              "fontSize": 13,
              "fontWeight": "500",
            }
          }
        >
          Sources
        </Text>
      </View>
    </View>
    <View
      className="flex-1"
    >
      <View
        className="px-4 pt-4 pb-2"
      >
        <View
          accessibilityLabel="New chat in this project"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="flex-row items-center justify-center gap-2 py-3 rounded-xl"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#f4f4f418",
              "borderColor": "#f4f4f435",
              "borderWidth": 1,
            }
          }
        >
          <View
            color="#f4f4f4"
            size={16}
            testID="icon-square-pen"
          />
          <Text
            className="text-[14px] font-semibold"
            style={
              {
                "color": "#f4f4f4",
              }
            }
          >
            New chat
          </Text>
        </View>
      </View>
      <View
        className="items-center justify-center py-16 px-6"
      >
        <View
          className="w-16 h-16 rounded-2xl items-center justify-center mb-4"
          style={
            {
              "backgroundColor": "rgba(244, 244, 244, 0.56)14",
            }
          }
        >
          <View
            color="rgba(244, 244, 244, 0.56)"
            size={28}
            testID="icon-message-square"
          />
        </View>
        <Text
          className="text-[15px] font-semibold text-center mb-2"
          style={
            {
              "color": "#f4f4f4",
            }
          }
        >
          No chats yet
        </Text>
        <Text
          className="text-[13px] text-center leading-[19px] mb-6"
          style={
            {
              "color": "rgba(244, 244, 244, 0.74)",
            }
          }
        >
          Start a conversation in this project.
        </Text>
        <View
          accessibilityLabel="New chat"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="flex-row items-center gap-2 px-5 py-2.5 rounded-xl"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#f4f4f418",
              "borderColor": "#f4f4f435",
              "borderWidth": 1,
            }
          }
        >
          <View
            color="#f4f4f4"
            size={15}
            testID="icon-square-pen"
          />
          <Text
            className="text-[13px] font-semibold"
            style={
              {
                "color": "#f4f4f4",
              }
            }
          >
            New chat
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
